<resources>
    <string name="app_name">Manager Tabs</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="manager">Manager</string>
    <string name="managerName">John Temporary</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to worker_tabs page -->
    <string name="worker">Worker</string>
    <string name="workerName">Example Worker</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="loading">Loading...</string>
    <string name="title_activity_login_temp">LoginTemp</string>
    <string name="title_activity_manager_inventory">Manager Inventory</string>
    <string name="title_activity_donations">Donations</string>
    <string name="title_activity_donors">Donors</string>
    <string name="title_activity_staff">Staff</string>
    <string name="title_activity_worker_inventory">Inventory</string>
    <string name="title_activity_worker_donations">Donations</string>

    <!-- Strings related to Staff Page -->
    <string name="title_Staff">Worker Staff</string>
    <!-- Not needed, used to clear warning message -->
    <string name="image2description">Profile Pic 1</string>


    //card_view strings
    <string name="date">Date: </string>
    <string name="item">Item: </string>
    <string name="quantity">Quantity: </string>
    <string name="DateRecived">Date Received:</string>
    <string name="expire">Expire:</string>
    <string name="category">Category:</string>
    <string name="min">Minimum Threshold:</string>
    <string name="location">Location</string>
</resources>
