<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="16dp">



    <android.support.v7.widget.CardView

        android:id="@+id/CV_inventory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        app:cardBackgroundColor="@android:color/darker_gray">




        <RelativeLayout
            android:id="@+id/inventory_buttonDropDown"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="end"
            android:layout_alignParentRight="true"
            android:gravity="center">

            <View
                android:layout_width="12dp"
                android:layout_height="12dp"
                android:background="@drawable/arrow_right"
                android:layout_alignParentRight="false"
                android:layout_alignParentEnd="false" />

        </RelativeLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/Inventory_Category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category" />

            <TextView
                android:id="@+id/Inventory_Expire"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/expire" />

            <TextView
                android:id="@+id/Inventory_Item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item" />

            <TextView
                android:id="@+id/Inventory_Date_Received"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Size:" />
            <TextView
                android:id="@+id/Inventory_Loacation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location"
                />
            <TextView
                android:id="@+id/Inventory_Quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quantity"
                />
            <TextView
                android:id="@+id/Inventory_Min"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/min"
                />


        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>