<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="1dp">

    <android.support.v7.widget.CardView

        android:id="@+id/CV_donation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"

        app:cardBackgroundColor="@android:color/darker_gray">


        <RelativeLayout
            android:id="@+id/Donation_main_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            >

            <TextView
                android:id="@+id/Donation_Item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item"
                android:textSize="20dp"
                android:textStyle="bold"
                android:layout_marginBottom="1dp"
                android:gravity="center"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/Donation_Donor"
                android:text="Donor: "
                android:textSize="20dp"
                android:textStyle="bold"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/Donation_Item"

                />

            <RelativeLayout
                android:id="@+id/inventory_buttonDropDown"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="end"
                android:layout_alignParentRight="true"
                android:gravity="center">

                <View
                    android:layout_width="12dp"
                    android:layout_height="12dp"
                    android:background="@drawable/arrow_right"
                    android:layout_alignParentRight="false"
                    android:layout_alignParentEnd="false" />

            </RelativeLayout>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/position"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            >

            <LinearLayout
                android:id="@+id/inventory_expand"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="42dp"

                >

                <TextView
                    android:id="@+id/Donation_Category"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/category" />

                <TextView
                    android:id="@+id/Donation_Expire"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/expire" />


                <TextView
                    android:id="@+id/Donation_Loacation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/location" />

                <TextView
                    android:id="@+id/Donation_Quantity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/quantity" />

                <TextView
                    android:id="@+id/Donation_Min"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/min" />

                <TextView
                    android:id="@+id/Donation_Date_Received"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dateRecived" />


            </LinearLayout>
        </RelativeLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>